--- a/code/package.json
+++ b/code/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://Nuraiym92.github.io/orion",
   "name": "user-card",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "gh-pages": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^3.1.0",
@@ -17,12 +18,15 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "sass-loader": "^12.3.0",
+    "save-dev": "^0.0.1-security",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
